--- a/src/app/Masterdata/masterdata-overview/masterdata-overview.component.html
+++ b/src/app/Masterdata/masterdata-overview/masterdata-overview.component.html
@@ -1,7 +1,7 @@
 <ul class="cards">
   <li>
     <a href="" class="card">
-      <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
+      <img src="https://image.shutterstock.com/image-photo/curvy-windy-road-snow-covered-600w-1262270857.jpg" class="card__image" alt="" />
       <div class="card__overlay">
         <div class="card__header">
           <div class="blur">
@@ -21,85 +21,7 @@
           <span  class="colorwithgrenn">Fahrer</span> oder
           <span class="colorwithgrenn">Fähigkeiten</span>.
         </p>
-        <a _ngcontent-wan-c80="" role="button" class="btn green rounded-pill ps-5 pe-5" href="#/RessourceMasterData">Anpassen</a>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="" class="card">
-      <img src="https://i.imgur.com/2DhmtJ4.jpg" class="card__image" alt="" />
-      <div class="card__overlay">
-        <div class="card__header">
-          <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-            <path />
-          </svg>
-          <img
-            class="card__thumb"
-            src="https://i.imgur.com/sjLMNDM.png"
-            alt=""
-          />
-          <div class="card__header-text">
-            <h3 class="card__title">kim Cattrall</h3>
-            <span class="card__status">3 hours ago</span>
-          </div>
-        </div>
-        <p class="card__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-          blanditiis?
-        </p>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="" class="card">
-      <img src="https://i.imgur.com/oYiTqum.jpg" class="card__image" alt="" />
-      <div class="card__overlay">
-        <div class="card__header">
-          <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-            <path />
-          </svg>
-          <img
-            class="card__thumb"
-            src="https://i.imgur.com/7D7I6dI.png"
-            alt=""
-          />
-          <div class="card__header-text">
-            <h3 class="card__title">Jessica Parker</h3>
-            <span class="card__tagline"
-              >Lorem ipsum dolor sit amet consectetur</span
-            >
-            <span class="card__status">1 hour ago</span>
-          </div>
-        </div>
-        <p class="card__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-          blanditiis?
-        </p>
-      </div>
-    </a>
-  </li>
-  <li>
-    <a href="" class="card">
-      <img src="https://i.imgur.com/2DhmtJ4.jpg" class="card__image" alt="" />
-      <div class="card__overlay">
-        <div class="card__header">
-          <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-            <path />
-          </svg>
-          <img
-            class="card__thumb"
-            src="https://i.imgur.com/sjLMNDM.png"
-            alt=""
-          />
-          <div class="card__header-text">
-            <h3 class="card__title">kim Cattrall</h3>
-            <span class="card__status">3 hours ago</span>
-          </div>
-        </div>
-        <p class="card__description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-          blanditiis?
-        </p>
+        <a role="button" class="btn green rounded-pill ps-5 pe-5" href="#/RessourceMasterData">Anpassen</a>
       </div>
     </a>
   </li>
