--- a/src/app/Masterdata/masterdata-overview/masterdata-overview.component.css
+++ b/src/app/Masterdata/masterdata-overview/masterdata-overview.component.css
@@ -12,7 +12,7 @@ body {
 
 .cards {
   --surface-color: #fff;
-  --curve: 20;
+  --curve: 30;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
@@ -22,6 +22,7 @@ body {
 }
 
 .card {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   position: relative;
   display: block;
   height: 100%;
@@ -54,6 +55,7 @@ body {
   width: 100%;
   background-color: black;
   opacity: 0.8;
+  padding-bottom: 30px;
   height: auto;
 }
 
@@ -78,7 +80,7 @@ body {
   display: flex;
   align-items: center;
   gap: 2em;
-  padding: 0.5em;
+  padding: 1em;
   border-radius: calc(var(--curve) * 1px);
   background-color: var(--surface-color);
   transform: translateY(-100%);
@@ -105,7 +107,7 @@ body {
 
 .card__title {
   font-size: 1em;
-  margin: 0 0 0.3em;
+  margin: 0 0 0.1em;
   color: #6a515e;
 }
 
@@ -123,7 +125,7 @@ body {
 }
 
 .card__description {
-  padding: 0 2em 2em;
+  padding: 1em 1em 1em;
   margin: 0;
   color: #d7bdca;
   font-family: 'MockFlowFont';
@@ -152,7 +154,7 @@ body {
   border: 1px solid #0000;
   padding: 0.45rem 0.9rem;
   font-size: 0.9rem;
-  border-radius: 0.15rem;
+  border-radius: 0.3rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
